k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openyard-control
  namespace: openyard
  labels:
    app.kubernetes.io/name: openyard-control
spec:
  selector:
    app.kubernetes.io/name: openyard-control
  ports:
    - name: http
      port: 80
      targetPort: http
